# TTS

./: .bumpversion.cfg  .coverage  .flake8  .gitignore  .pre-commit-config.yaml  .streaming_playlist.m3u  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  COVERAGE_REPORT.md  FINAL_SUMMARY.md  LINT_RESULTS.md  Makefile  PROJECT_STATUS.md  QUICKSTART.md  QUICKSTART_COMMANDS.md  Read_my.ahk.bak  activate.sh  check-venv.sh  coverage.xml  install.sh  lint.ps1  lint.sh  main.py  pyproject.toml  pytest.ini  read.ahk  read_example.ahk  readme.md  requirements-dev.txt  requirements-test.txt  requirements.txt  run_git.py  run_pip.py  run_tests.py  run_tests2.py  run_tests3.py  setup-bash.sh  setup.ps1  shortcuts_example.py  (+4 more)
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish-pypi.yml
.tts_fast_cache/: cache.db
docs/: architecture.md
examples/: example_api.py
extras/: tts_config.example.json
extras/autohotkey/: Install-TTS_ka-Hotkeys.ps1  TTS_ka_hotkeys.ahk
extras/windows/context_menu/: Install-TTS_ka-ContextMenu.ps1
scripts/: release.py
src/: audioop.py  playsound.py  pygame.py  requirements.txt
src/TTS_ka/: __init__.py  __main__.py  audio.py  chunker.py  chunking.py  cli.py  constants.py  deps.py  fast_audio.py  gui.py  help_system.py  main.py  native_hotkeys.py  not_reading.py  parallel.py  rich_progress.py  simple_help.py  streaming_player.py  ultra_fast.py  user_config.py  windows_shell.py
src/TTS_ka.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/text_to_speech.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: __init__.py  conftest.py  test_audio.py  test_audio_simple.py  test_chunking.py  test_chunking_simple.py  test_comprehensive.py  test_coverage_boost.py  test_deps.py  test_fast_audio.py  test_final_coverage.py  test_function_paths.py  test_gui_fonts.py  test_gui_helpers.py  test_gui_smoke.py  test_integration.py  test_main.py  test_main_simple.py  test_minimal_coverage.py  test_native_hotkeys.py  test_not_readable.py  test_parallel.py  test_reading.txt  test_rich_progress.py  test_simple_help.py  test_simple_help_simple.py  test_streaming.py  test_streaming_integration.py  test_ultra_fast.py  test_user_config.py  test_windows_shell.py
tools/: check_env.py
