[build-system]
# setuptools>=77: PEP 639 SPDX `license` + `license-files` (replaces deprecated license table)
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TTS_ka"
version = "1.7.0"
authors = [
  { name="David Chincharashvili", email="davidchincharashvili@gmail.com" },
]
description = "Ultra-fast CLI TTS for Georgian, Russian, and English (edge-tts): smart chunking, optional streaming, clipboard, dependency checker, and optional tkinter GUI."
readme = "readme.md"
keywords = [
    "tts",
    "text-to-speech",
    "georgian",
    "russian",
    "english",
    "edge-tts",
    "accessibility",
    "speech",
    "clipboard",
    "streaming",
    "mp3",
]
# asyncio is stdlib; httpx 0.28+ supports 3.8+, but setuptools>=77 (PEP 639 metadata) needs 3.9+ to build.
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "edge-tts>=7.2.7",
    "pydub>=0.25.1",  # optional / recommended runtime helpers
    "tqdm>=4.65.0",
    "httpx>=0.28.1",
    # ffmpeg must be installed on the system (not a pip package)
]

[project.urls]
Homepage = "https://github.com/DavidTbilisi/TTS"
Repository = "https://github.com/DavidTbilisi/TTS"
Issues = "https://github.com/DavidTbilisi/TTS/issues"
Changelog = "https://github.com/DavidTbilisi/TTS/releases"

[project.scripts]
TTS_ka = "TTS_ka.main:main"
TTS_ka-gui = "TTS_ka.gui:main"
TTS_ka-hotkeys = "TTS_ka.native_hotkeys:main"

[project.optional-dependencies]
hotkeys = [
    "pynput>=1.7.6",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "coverage[toml]>=7.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "coverage[toml]>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.coverage.run]
source = ["src/TTS_ka"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/TTS_ka/gui.py",
    "*/TTS_ka/native_hotkeys.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--verbose",
    "--tb=short",
    "--cov=src/TTS_ka",
    "--cov-report=html:htmlcov",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=70",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]